# CCRE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  a.out  main.cpp  main2.cpp  pyproject.toml  state  state.cpp  state.h  token.cpp  types.h  unicode.h
data/: big_untyped_state.json  mobydick.txt  small_test_state.json
include/: alloc_buffer.h  base_matcher.h  builtin_funcs.h  conds.h  context.h  corgi.h  cre_obj.h  fact.h  factset.h  flattener.h  func.h  hash.h  helpers.h  incr_processor.h  intern.h  intern0.h  intern1.h  intern2.h  item.h  literal.h  logic.h  mapping.h  member.h  objs_hash_eq.h  pool_allocator.h  ref.h  state.h  structure_map.h  t_ids.h  token.h  types.h  unicode.h  var.h  var_inds.h  vectorizer.h  wref.h
python/: my_ext.cpp
python/ext/: cre_py_ext.cpp  dummer_ext.cpp  dummy_ext.cpp
python/ext/cre/: __init__.py
python/include/: py_cre_core.h  shared_func_utils.h  shared_logic_utils.h
python/src/: py_cre_core.cpp  py_fact.cpp  py_factset.cpp  py_flattener.cpp  py_func.cpp  py_logic.cpp  py_logical.cpp  py_match_iter.cpp  py_types.cpp  py_var.cpp  py_vectorizer.cpp  shared_func_utils.cpp  shared_logic_utils.cpp
python/tests/: bench_corgi.py  run_broken_dog.py  run_cre.py  run_dog.py  t_utils.py  test_fact.py  test_factset.py  test_func.py  test_logical.py  test_structure_map.py  test_transform.py  test_utils.py  valgrind.supp
src/: alloc_buffer.cpp  context.cpp  cre_obj.cpp  fact.cpp  factset.cpp  factset_json.cpp  flattener.cpp  func.cpp  hash.cpp  incr_processor.cpp  intern.cpp  item.cpp  literal.cpp  state.cpp  token.cpp  types.cpp  unicode.cpp  var.cpp  vectorizer.cpp
src/core/: alloc_buffer.cpp  base_matcher.cpp  builtin_funcs.cpp  conds.cpp  context.cpp  corgi.cpp  cre_obj.cpp  fact.cpp  factset.cpp  func.cpp  hash.cpp  helpers.cpp  intern.cpp  item.cpp  literal.cpp  logic.cpp  mapping.cpp  objs_hash_eq.cpp  pool_allocator.cpp  structure_map.cpp  structure_map_notes.py  types.cpp  var.cpp
src/transform/: factset_json.cpp  flattener.cpp  incr_processor.cpp  vectorizer.cpp
tests/: test_corgi.cpp  test_fact.cpp  test_factset.cpp  test_func.cpp  test_hash.cpp  test_logical.cpp  test_macros.h  test_structure_map.cpp  test_transform.cpp
